# python-examples

./: .gitignore  CLAUDE.md  DEVELOPMENT.md  Makefile  PYPI_README.md  README.md  README_CLOUDWIZARD.md  RELEASING.md  config-template.toml  config.toml.template  conftest.py  gh-md-toc  object-store-removal.md  pyproject.toml  release.sh  requirements-cloudwizard.txt  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
agent/: application.yaml.template  ydagent-windows-service.md
image-tools/amazon-linux-2-ecs/: README.md  yd_install.sh
scripts/: Makefile  PYPI_README.md  README.md  __init__.py  abort.py  args.py  cancel.py  common.py  compact_json.py  config.toml.template  config_keys.py  delete.py  download.py  interactive.py  json_keys.py  list.py  object_utilities.py  printing.py  provision.py  reformat_json.py  rename.py  requirements.txt  selector.py  setup.py  shutdown.py  submit.py  terminate.py  test_bash_script.sh  version.py  which_config.py  wrapper.py
tests/: README.md  test_add_to.py  test_arguments_assembly.py  test_build_dc_substitutions.py  test_compact_json.py  test_compare.py  test_create_remove.py  test_csv_data.py  test_dataclient_utils.py  test_demos.py  test_dryruns.py  test_entrypoints.py  test_environment_merge.py  test_gui.py  test_instance_pricing_preference.py  test_interactive.py  test_list.py  test_load_config_helpers.py  test_ls_formatting.py  test_misc_utils.py  test_node_batching.py  test_nodeaction_args.py  test_nodeaction_parsing.py  test_objects.py  test_printing.py  test_property_overrides.py  test_provision_utils.py  test_rclone_utils.py  test_resequence_resources.py  test_resolve_entity_type.py  test_select_dc_section.py  test_start_hold_common.py  test_submit_batching.py  test_submit_functions.py  test_submit_utils.py  test_system_cancel_hold_finish.py  test_system_csv_batch.py  test_system_dataclient.py  test_system_error_handling.py  test_system_lifecycle.py  (+7 more)
tests/system/: add-bash-task-type.sh  config.toml  install-agent.sh  tasks.csv  wr_csv_batch.json  wr_trivial.json
yd_commands/: __init__.py  abort.py  admin.py  args.py  aws_cloudwizard.py  aws_types.py  azure_cloudwizard.py  boost.py  cancel.py  check_imports.py  cloudwizard.py  cloudwizard_aws.py  cloudwizard_azure.py  cloudwizard_common.py  cloudwizard_gcp.py  common.py  common_cloudwizard.py  compact_json.py  config.py  config_keys.py  config_types.py  create.py  csv_data.py  delete.py  download.py  entity_utils.py  follow.py  follow_utils.py  gcp_cloudwizard.py  hold.py  id_utils.py  instantiate.py  interactive.py  items.py  jsonnet2json.py  list.py  load_config.py  load_resources.py  mustache.py  object_utilities.py  (+27 more)
yellowdog_cli/: __init__.py  abort.py  admin.py  analyse.py  application.py  boost.py  cancel.py  cloudwizard.py  compare.py  create.py  delete.py  download.py  finish.py  follow.py  format_json.py  help.py  hold.py  instantiate.py  jsonnet2json.py  list.py  ls.py  nodeaction.py  provision.py  remove.py  resize.py  show.py  shutdown.py  start.py  submit.py  terminate.py  upload.py  version.py
yellowdog_cli/utils/: args.py  check_imports.py  cloudwizard_aws.py  cloudwizard_aws_types.py  cloudwizard_azure.py  cloudwizard_common.py  cloudwizard_gcp.py  compact_json.py  config_types.py  csv_data.py  dataclient_utils.py  dataclient_wrapper.py  entity_utils.py  follow_utils.py  interactive.py  items.py  load_config.py  load_resources.py  misc_utils.py  printing.py  property_names.py  provision_utils.py  rclone_utils.py  rich_console_input_fixed.py  settings.py  start_hold_common.py  submit_utils.py  type_check.py  upload_utils.py  validate_properties.py  variables.py  wrapper.py  ydid_utils.py
