[build-system]
    requires = ["setuptools>=61.2"]
    build-backend = "setuptools.build_meta"

[project]
    name = "yellowdog-python-examples"
    description = "Python CLI commands using the YellowDog Python SDK"
    classifiers = [
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.7",
        "License :: OSI Approved :: Apache Software License",
        "Operating System :: OS Independent",
        "Development Status :: 4 - Beta",
    ]
    requires-python = ">=3.7"
    dynamic = ["version", "dependencies"]

[[project.authors]]
    name = "YellowDog Limited"
    email = "support@yellowdog.co"

[project.readme]
    file = "PYPI_README.md"
    content-type = "text/markdown"

[project.urls]
    Homepage = "https://github.com/yellowdog/python-examples"

[project.optional-dependencies]
    jsonnet = ["jsonnet"]
    cloudwizard = [
        "boto3",
        "google-cloud-compute",
        "google-cloud-storage",
        "azure-identity",
        "azure-mgmt-resource",
        "azure-mgmt-network",
        "azure-mgmt-storage",
        "azure-mgmt-subscription",
    ]

[project.scripts]
    yd-abort = "yellowdog_cli.abort:main"
    yd-boost = "yellowdog_cli.boost:main"
    yd-cancel = "yellowdog_cli.cancel:main"
    yd-cloudwizard = "yellowdog_cli.cloudwizard:main"
    yd-compare = "yellowdog_cli.compare:main"
    yd-create = "yellowdog_cli.create:main"
    yd-delete = "yellowdog_cli.delete:main"
    yd-download = "yellowdog_cli.download:main"
    yd-follow = "yellowdog_cli.follow:main"
    yd-format-json = "yellowdog_cli.format_json:main"
    yd-hold = "yellowdog_cli.hold:main"
    yd-instantiate = "yellowdog_cli.instantiate:main"
    yd-jsonnet2json = "yellowdog_cli.jsonnet2json:main"
    yd-list = "yellowdog_cli.list:main"
    yd-provision = "yellowdog_cli.provision:main"
    yd-remove = "yellowdog_cli.remove:main"
    yd-resize = "yellowdog_cli.resize:main"
    yd-show = "yellowdog_cli.show:main"
    yd-shutdown = "yellowdog_cli.shutdown:main"
    yd-start = "yellowdog_cli.start:main"
    yd-submit = "yellowdog_cli.submit:main"
    yd-terminate = "yellowdog_cli.terminate:main"
    yd-upload = "yellowdog_cli.upload:main"
    yd-version = "yellowdog_cli.version:main"

[tool.setuptools]
    include-package-data = false
    packages = ["yellowdog_cli", "yellowdog_cli.utils"]

[tool.setuptools.dynamic.version]
    attr = "yellowdog_cli.__init__.__version__"

[tool.setuptools.dynamic.dependencies]
    file = ["requirements.txt"]
