[metadata]
name = yellowdog-python-examples
version = attr:yd_commands.__init__.__version__
author = YellowDog Limited
author_email = support@yellowdog.co
description = Example Python commands using the YellowDog Python SDK
url = https://github.com/yellowdog/python-examples
long_description = file: PYPI_README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Development Status :: 4 - Beta

[options]
packages = find:
install_requires = file: requirements.txt
python_requires = >=3.7

[options.entry_points]
console_scripts =
    yd-abort=yd_commands.abort:main
    yd-cancel=yd_commands.cancel:main
    yd-delete=yd_commands.delete:main
    yd-download=yd_commands.download:main
    yd-instantiate=yd_commands.instantiate:main
    yd-jsonnet2json=yd_commands.jsonnet2json:main
    yd-list=yd_commands.list:main
    yd-provision=yd_commands.provision:main
    yd-reformat-json=yd_commands.reformat_json:main
    yd-show=yd_commands.show:main
    yd-shutdown=yd_commands.shutdown:main
    yd-submit=yd_commands.submit:main
    yd-terminate=yd_commands.terminate:main
    yd-upload=yd_commands.upload:main
    yd-version=yd_commands.version:main

[options.extras_require]
jsonnet = jsonnet
